--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<div id="progressbar"></div>
 						</div>
 						
-               <form name='onboarding' method='POST/GET' action='https://paperchain.io/onboarding-submit/' id='wrapped' autocomplete='off' _lpchecked='1' netlify-honeypot="bot-field" data-netlify="true">
+               <form name='data-onboarding' method='POST' action='https://paperchain.io/onboarding-submit/' id='wrapped' autocomplete='off' _lpchecked='1' netlify-honeypot="bot-field" data-netlify="true">
                  <p class="hidden"><label>Don’t fill this out if you're human: <input name="bot-field" /></label></p>
 							<input id="website" name="website" type="text" value="">
 							
