--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                <form name='onboarding' method='POST' action='/onboarding-submit/' id='wrapped' autocomplete='off' _lpchecked='1' netlify-honeypot="bot-field" data-netlify="true" onsubmit='return(validate());'>
                  <p class="hidden"><label>Don’t fill this out if you're human: <input name="bot-field" /></label></p>
 							<input id="website" name="website" type="text" value="">
+              <input id="hashem" name="hashem" type="hidden">
 							
 							<div id="middle-wizard">
 								<div class="step">
-									<h3 class="main_question"><strong>1/4</strong>Account details.</h3>
-									<div class="form-group">
-										<input type="email" name="email" id="email" class="form-control required" placeholder="Your Email">
-									</div>
+									<h3 class="main_question"><strong>1/4</strong>Terms & Privacy.</h3>
+
 									<div class="form-group">
                     <p>You agree to the <a href="https://paperchain.io/terms-of-service" target="_blank">Terms of Service</a> and <a href="https://paperchain.io/privacy-policy" target="_blank">Privacy Policy</a>:</p>
                     <p>tl;dr<br>
@@ -129,14 +128,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<div class="step">
                   <h3 class="main_question"><strong>2/4</strong>Spotify</h3>
                   <div class="form-group">
-                    <p>In order to configure this integration, we need to access your data from Spotify Standard Bulk API using your <strong>Client ID</strong> and <strong>Client Secret</strong> API credentials.</p>
-                    <p>In case you're not already setup, you can <a href="https://analytics.spotify.com/c/api/" target="_blank">request access here</a>.</p>
+                    <p>You will need to provide your Spotify <strong>Client ID</strong> and <strong>Client Secret</strong> API credentials. In case you're not already setup, you can <a href="https://analytics.spotify.com/c/api/" target="_blank">request access here</a>.</p>
+                    <p>You will also need to provide your Spotify Licensor Name, which should be in your welcome email from Spotify.</p> <p><small>(It's usually your company name, all lower-case and non-Latin characters removed.)</small></p>
                   </div>
                   <div class="form-group">
                     <input type="text" name="spotid" class="form-control required valid" placeholder="Spotify Client ID" onchange="getVals(this, 'spotid');">
                   </div>
                   <div class="form-group">
                     <input type="text" name="spotsec" class="form-control required valid" placeholder="Spotify Client Secret" onchange="getVals(this, 'spotsec');">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" name="spotlic" class="form-control required valid" placeholder="Spotify Licensor Name" onchange="getVals(this, 'spotlic');">
                   </div>
 								</div>
 								<div class="submit step">
@@ -191,8 +193,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<script src="assets/js/survey_func.js"></script>
 
   <script>
-  var emailField = document.getElementById("email");
-  emailField.value = getParameterByName("email");
+  var hashemField = document.getElementById("hashem");
+  hashemField.value = getParameterByName("hashem");
 
 function getParameterByName(name) 
 {
