--- a/index.html
+++ b/index.html
@@ -128,17 +128,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<div class="step">
                   <h3 class="main_question"><strong>2/4</strong>Spotify</h3>
                   <div class="form-group">
-                    <p>You will need to provide your Spotify <strong>Client ID</strong> and <strong>Client Secret</strong> API credentials. In case you're not already setup, you can <a href="https://analytics.spotify.com/c/api/" target="_blank">request access here</a>.</p>
-                    <p>You will also need to provide your Spotify Licensor Name, which should be in your welcome email from Spotify.</p> <p><small>(It's usually your company name, all lower-case and non-Latin characters removed.)</small></p>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" name="spotid" class="form-control required valid" placeholder="Spotify Client ID" onchange="getVals(this, 'spotid');">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" name="spotsec" class="form-control required valid" placeholder="Spotify Client Secret" onchange="getVals(this, 'spotsec');">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" name="spotlic" class="form-control required valid" placeholder="Spotify Licensor Name" onchange="getVals(this, 'spotlic');">
+                    <p>If you already have bulk API access, <a href="mailto:danielhedblom@spotify.com?subject=Confirming Paperchain access&body=Hi Daniel, Confirming Paperchain access to our bulk API">click here to email Daniel Hedblom at Spotify</a> to confirm Paperchain can access your credentials.</p>
+                    <p>If you do not have bulk API access, you can <a href="https://analytics.spotify.com/c/api/" target="_blank">request access here</a>.</p>
+                    <p>Once you have emailed Daniel, click "Next" below.</p>
                   </div>
 								</div>
 								<div class="submit step">
